# ai-engineering-the-hard-way

./: AGENTS.md  README.md  pyproject.toml
eval/01-llm-as-judge/: README.md
memory/01-conversation-buffer/: README.md  demo.py  experiment.py
memory/02-sliding-window/: README.md  demo.py  experiment.py
memory/03-summarization-memory/: README.md  demo.py  experiment.py
memory/04-vector-memory/: README.md  demo.py  experiment.py
memory/05-entity-memory/: README.md  demo.py  experiment.py
memory/06-episodic-memory/: README.md  demo.py  experiment.py
memory/07-knowledge-graph-memory/: README.md  demo.py  experiment.py
memory/08-provenance-confidence-memory/: README.md  demo.py  experiment.py
memory/09-conflict-resolution-memory/: README.md  demo.py  experiment.py
memory/10-layered-memory/: README.md  demo.py  experiment.py
multi-agent/01-router/: README.md  demo.py  experiment.py
multi-agent/02-orchestrator/: README.md  demo.py  experiment.py
multi-agent/03-parallel-fanout/: README.md  demo.py  experiment.py
multi-agent/04-sequential-pipeline/: README.md  demo.py  experiment.py
multi-agent/05-critic-agent/: README.md  demo.py  experiment.py
multi-agent/06-debate/: README.md  demo.py  experiment.py
multi-agent/07-consensus-voting/: README.md  demo.py  experiment.py
multi-agent/08-peer-review/: README.md  demo.py  experiment.py
multi-agent/09-shared-blackboard/: README.md  demo.py  experiment.py
multi-agent/10-swarm/: README.md  demo.py  experiment.py
multi-agent/11-task-auction/: README.md  demo.py  experiment.py
(+91 files in other folders)
